--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,4 +33,14 @@ app {
         height:200px;
         border-radius:150px;
     }
+
+    .title.title.md{
+        position: absolute;
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+        height: 100%;
+        width: 70%;
+        text-align: center;
+    }
 }
