--- a/src/pages/questions/questions.scss
+++ b/src/pages/questions/questions.scss
@@ -1,9 +1,6 @@
-page-room{
-    .toolbar-background {
-  background-color: #56CA96;
-}
+questions{
 
-.submit-btn {
+    .submit-btn {
        border-radius: 30px !important;
        border: 1px solid #ffffff;
        font-family: 'Play', sans-serif;
